--- a/Sivilab.PortalEmpleo/Components/Pages/RegistrarUsuario.razor
+++ b/Sivilab.PortalEmpleo/Components/Pages/RegistrarUsuario.razor
@@ -3,6 +3,7 @@
 @using System.Net.Http.Json 
 @using Microsoft.AspNetCore.Components.Web
 @using System.Text.RegularExpressions
+@inject HttpClient httpClient
 
 
 <style>
