--- a/Sivilab.PortalEmpleo/Components/_Imports.razor
+++ b/Sivilab.PortalEmpleo/Components/_Imports.razor
@@ -9,3 +9,5 @@
 @using Sivilab.PortalEmpleo
 @using Sivilab.PortalEmpleo.Components
 @using Sivilab.Models.Models
+@using BlazorBootstrap
+@using BlazorBootstrap.Components
