--- a/Sivilab.Portal/Views/Home/Index.cshtml
+++ b/Sivilab.Portal/Views/Home/Index.cshtml
@@ -1,5 +1,6 @@
 ﻿@using System.IO
 @using System.Text.Json
+@using Sivilab.Portal.Models
 @{
     ViewData["Title"] = "Eventos";
     var fechaActual = DateTime.UtcNow.Date;
@@ -713,16 +714,3 @@
         });
     });
 </script>
-
-@functions {
-    public class Evento
-    {
-        public int vigente { get; set; }
-        public string titulo { get; set; }
-        public string imagen { get; set; }
-        public string fecha { get; set; }
-        public string lugar { get; set; }
-        public string descripcion { get; set; }
-        public string liga { get; set; }
-    }
-}
